--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="messagecontentcont" class="messagecontentcont hide">     
         <div class="panel panel-info messagebox">
           <div id="message_header" class="panel-heading">
-            <p class="pull-left">sample header</p>
+            <p class="pull-left">Message</p>
             <p id="messageclose" class="messagecomposerbtn" style="color:#000;" >x</p>
           </div>
           <div id="messagecontent" class="messagecontent">
@@ -54,7 +54,7 @@
 
 <div class="container" style="height:100%;min-height:650px;background-color:#fff;">
       
-      <div class="jumbotron" style="height:200px;" >
+      <div id="page_title" class="jumbotron">
         <h1>Pmail</h1>
         <p>An e-mail app for doctors.</p>      
       </div>
